--- a/web bien/castellano.html
+++ b/web bien/castellano.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="castellano.css" type="text/css">
+  <link rel="stylesheet" href="castellanomov.css" type="text/css">
   <title>Document</title>
 </head>
 <body>
