--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="ropa y accesorios.css" type="text/css">
+  <link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
   <title>Ropa y accesorios</title>
 </head>
 <body>
@@ -34,21 +35,21 @@
         <div id="nosotros">
         <h1> Tiendas</h1>
         <div id="madame"><h2>Madame Chocolat</h2>
-          <div> <img src="foto/madame4.jpg"  id="madame4"></div>
-          <div> <img src="foto/madame5.jpg"  id="madame5"></div>
+          <div> <img src="foto/madame4.jpg"  class="grande"></div>
+          <div> <img src="foto/madame5.jpg"  class="grande"></div>
           Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.
-          <div> <img src="foto/madame1.jpg"  id="madame1"></div>
-          <div> <img src="foto/madame2.jpg"  id="madame2"></div>
-          <div> <img src="foto/madame3.jpg"  id="madame3"></div>
+          <div> <img src="foto/madame1.jpg"  class="pequeña"></div>
+          <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
+          <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
           <div class="tex"></div>
         </div>
         <div id="nunoya"><h2>Nunoya</h2>
-          <div> <img src="foto/nunuya5.jpg"  id="nunoya5"></div>
-          <div> <img src="foto/nunoya6.jpg"  id="nunoya6"></div>
+          <div> <img src="foto/nunuya5.jpg"  class="grande"></div>
+          <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
            Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.
-          <div> <img src="foto/nunoya7.jpg"  id="nunoya7"></div>
-          <div> <img src="foto/nunoya3.jpg"  id="nunoya3"></div>
-          <div> <img src="foto/nunoya10.jpg"  id="nunoya10"></div>
+          <div> <img src="foto/nunoya7.jpg"  class="pequeña"></div>
+          <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
+          <div> <img src="foto/nunoya10.jpg" class="pequeña"></div>
         </div>
           <div id="norma"><h2>Nunoya</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
