--- a/web bien/castellano.html
+++ b/web bien/castellano.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="castellano.css" type="text/css">
   <link rel="stylesheet" href="castellanomov.css" type="text/css">
-  <title>Document</title>
+  <title>Sobre nosotros</title>
 </head>
 <body>
   <div id="arriba">
@@ -26,11 +26,11 @@
         <div id="secciones">
           <ul class="secc">Tiendas
             <li class="tiendas"> <a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-            <li class="tiendas">Consumo</li>
+            <li class="tiendas"><a href="consum.html">Consumo</a></li>
           </ul>
-          <div class="secc">Restaurantes</div>
+          <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc">Sobre nosotros</div>
+          <div class="secc"><a href="castellano.html">Sobre nosotros</a></div>
         </div>
         <div id="nosotros">
         <h1> Sobre nosotros</h3>
