--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="ropa y accesorios.css" type="text/css">
+  <link rel="stylesheet" href="consum.css" type="text/css">
   <link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
-  <title>Ropa y accesorios</title>
+  <title>Consumo</title>
 </head>
 <body>
   <div id="arriba">
@@ -19,7 +19,7 @@
   <div id="medio">
       <div id="textos">
         <div id="texto">Tiendas</div>
-        <div id="texto1">Ropa y accesorios</div>
+        <div id="texto1">Consumo</div>
       </div>
       <div><img src="foto/nunoya1.jpg" id="fondo"></div>
       <div id="blog">
@@ -34,13 +34,13 @@
         </div>
         <div id="nosotros">
         <h1> Tiendas</h1>
-        <div id="madame"><h2>Madame Chocolat</h2>
-          <div> <img src="foto/madame4.jpg"  class="grande"></div>
-          <div> <img src="foto/madame5.jpg"  class="grande"></div>
+        <div id="madame"><h2>Yang Kuang Supermercats</h2>
+          <div> <img src="foto/yang1.jpg"  class="grande"></div>
+          <div> <img src="foto/yang2.jpg"  class="grande"></div>
           <p id="text">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.</p>
-          <div> <img src="foto/madame1.jpg"  class="pequeña"></div>
-          <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
-          <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
+          <div> <img src="foto/yang3.jpg"  class="pequeña"></div>
+          <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
+          <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
           <p id="text">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
         </div>
 
@@ -66,20 +66,18 @@
           <div id="otonashi"><h2>Otonashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-            <p id="text">Otonashi es una pequeña tienda de merchandising y accesorios, el trato al publico es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
+  sjytykeeyk
             <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
-            <p id="text">Según la critica de la gente, en esta tienda puedes comprar accesorios de imitación china pero a un buen precio. Es recomendable comprar si no te quieres gastar mucho dinero en accesorios.</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
             <div> <img src="foto/haiku2.jpg"  class="grande"></div>
-            <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            ferh
             <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
-            <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
           </div>
 
       </div>
