--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -37,20 +37,20 @@
         <div id="madame"><h2>Yang Kuang Supermercats</h2>
           <div> <img src="foto/yang1.jpg"  class="grande"></div>
           <div> <img src="foto/yang2.jpg"  class="grande"></div>
-          <p id="text">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.</p>
+          <p id="text"></p>
           <div> <img src="foto/yang3.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
           <p id="text">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
         </div>
 
-        <div id="nunoya"><h2>Nunoya</h2>
-          <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
-          <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
+        <div id="nunoya"><h2>Tokyo-Ya</h2>
+          <div> <img src="foto/tokio1.jpg"  class="grande"></div>
+          <div> <img src="foto/tokio2.jpg"  class="grande"></div>
         <p id="text">Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
-          <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
-          <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
-          <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
+          <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
+          <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
+          <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
             <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.</p>
             <p id="text">Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
         </div>
