--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -37,47 +37,40 @@
         <div id="madame"><h2>Yang Kuang Supermercats</h2>
           <div> <img src="foto/yang1.jpg"  class="grande"></div>
           <div> <img src="foto/yang2.jpg"  class="grande"></div>
-          <p id="text"></p>
+          <p id="text">Yang Kuang es una tienda de alimentación oriantal que se encuentra en pleno Arco de Triumfo en Barcelona, en ella puedes encontrar todo tipo de alimentos, entre ellos se encuentran: Carne, dulces, bebidas de distintos sabores, tofu fresto y, además esta tienda dispone de dos apartados, en una podrás encontrar los productos más frescos y en la otra parte podrás encontrar comida ya preparada. Un añadido también es que es perfecta para la gente vegana y vegetariana.</p>
           <div> <img src="foto/yang3.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
-          <p id="text">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
+          <p id="text">Nuestra opinión sobre este supermercado es que los productos estan bien de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
+          <p id="text">Telefono: 932 46 29 00</p>
         </div>
 
         <div id="nunoya"><h2>Tokyo-Ya</h2>
           <div> <img src="foto/tokio1.jpg"  class="grande"></div>
           <div> <img src="foto/tokio2.jpg"  class="grande"></div>
-        <p id="text">Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
+        <p id="text">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son pioneros en acercar la gastronomía japonesa a España</p>
           <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
             <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.</p>
             <p id="text">Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
         </div>
-          <div id="norma"><h2>Norma comics</h2>
-            <div> <img src="foto/norma3.jpg"  class="grande"></div>
-            <div> <img src="foto/norma2.jpg"  class="grande"></div>
+          <div id="norma"><h2>Takashi Ochiai</h2>
+            <div> <img src="foto/takashi1.jpg"  class="grande"></div>
+            <div> <img src="foto/takashi2.jpg"  class="grande"></div>
              <p id="text">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
-            <div> <img src="foto/norma1.jpg"  class="pequeña"></div>
-            <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
+            <div> <img src="foto/takashi3.jpg"  class="pequeña"></div>
+            <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
+            <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
             <p id="text">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
           </div>
-          <div id="otonashi"><h2>Otonashi</h2>
+          <div id="otonashi"><h2>tienda</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
   sjytykeeyk
-            <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
-            <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
-          </div>
-          <div id="haiku"><h2>Haiku</h2>
-            <div> <img src="foto/haiku1.jpg"  class="grande"></div>
-            <div> <img src="foto/haiku2.jpg"  class="grande"></div>
-            ferh
-            <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
-            <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
+            <div> <img src="foto/tienda3.jpg"  class="pequeña"></div>
+            <div> <img src="foto/tienda4.jpg"  class="pequeña"></div>
+            <div> <img src="foto/tienda5.jpg"  class="pequeña"></div>
           </div>
 
       </div>
