--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -30,10 +30,9 @@
           </ul>
           <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Sobre nosotros</a></div>
+          <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
         <div id="nosotros">
-        <h1> Tiendas</h1>
         <div id="madame"><h2>Madame Chocolat</h2>
           <div> <img src="foto/madame4.jpg"  class="grande"></div>
           <div> <img src="foto/madame5.jpg"  class="grande"></div>
@@ -42,6 +41,7 @@
           <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
           <p id="text">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
+          <p id="text">Telefono: 932 44 84 23</p>
         </div>
 
         <div id="nunoya"><h2>Nunoya</h2>
@@ -53,6 +53,7 @@
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
             <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.</p>
             <p id="text">Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
+            <p id="text">Telofono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
@@ -62,6 +63,7 @@
             <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
             <p id="text">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
+            <p id="text">Telofono: 932 44 84 23</p>
           </div>
           <div id="otonashi"><h2>Otonashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
@@ -71,6 +73,7 @@
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
             <p id="text">Según la critica de la gente, en esta tienda puedes comprar accesorios de imitación china pero a un buen precio. Es recomendable comprar si no te quieres gastar mucho dinero en accesorios.</p>
+            <p id="text">Telofono: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
@@ -80,6 +83,7 @@
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text">Telofono: 932 17 96 23</p>
           </div>
 
       </div>
