--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -85,9 +85,9 @@
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
             <p id="text">Telofono: 932 17 96 23</p>
           </div>
-
       </div>
   </div>
+</div>
   <div id="abajo">
     <div id="flecha"><a href="#fondo"><p>sube</p></a></div>
     <div id="redes">
