--- a/web bien/castellano.html
+++ b/web bien/castellano.html
@@ -30,7 +30,7 @@
           </ul>
           <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Sobre nosotros</a></div>
+          <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
         <div id="nosotros">
         <h1> Sobre nosotros</h3>
