--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="consum.css" type="text/css">
-  <link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
+  <link rel="stylesheet" href="consummov.css" type="text/css">
+
   <title>Consumo</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
         <div id="texto">Tiendas</div>
         <div id="texto1">Consumo</div>
       </div>
-      <div><img src="foto/nunoya1.jpg" id="fondo"></div>
+      <div><img src="foto/fondo1.jpg" id="fondo"></div>
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
@@ -30,7 +31,7 @@
           </ul>
           <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Sobre nosotros</a></div>
+          <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
         <div id="nosotros">
         <h1> Tiendas</h1>
@@ -48,26 +49,28 @@
         <div id="nunoya"><h2>Tokyo-Ya</h2>
           <div> <img src="foto/tokio1.jpg"  class="grande"></div>
           <div> <img src="foto/tokio2.jpg"  class="grande"></div>
-        <p id="text">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son pioneros en acercar la gastronomía japonesa a España</p>
+        <p id="text">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. La atención al publico está muy bien, ya que te reciben con mucho guto al entrar.</p>
           <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
-            <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.</p>
-            <p id="text">Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
+            <p id="text">Los precios de este supermercado son un poco elevados, ya que son de importación, vienen con buena calidad y con los productos congelados son muy frescos.</p>
+            <p id="text">Telefon: 935 32 19 38</p>
+
         </div>
-          <div id="norma"><h2>Takashi Ochiai</h2>
+          <div id="otonashi"><h2>Takashi Ochiai</h2>
             <div> <img src="foto/takashi1.jpg"  class="grande"></div>
             <div> <img src="foto/takashi2.jpg"  class="grande"></div>
-             <p id="text">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
+             <p id="text">Takashi Ochiai es una pasteleria y cafeteria japonesa minimalista, puedes encontrar desde dulces japoneses hasta sus bebidas. El precio de sus productos son muy elevados pero merece la pena pagar por ello ya que la comida esta muy bien. Merece la pena visitar este sitio.</p>
             <div> <img src="foto/takashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
-            <p id="text">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
+            <p id="text"> Este sitio esta bien para ir una vez a la semana, ya que solo un capuchino cuesta 6,30€ no es muy sano para la cartera. Si te interesa aprender hacer postres japoneses, en este sitio hacen cursos pero tienen muy pocas plazas asi que corre.</p>
+            <p id="text">Telefon: 934 53 63 83</p>
           </div>
           <div id="otonashi"><h2>tienda</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-  sjytykeeyk
+  Hay que ir a este sitio AÚN
             <div> <img src="foto/tienda3.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda4.jpg"  class="pequeña"></div>
             <div> <img src="foto/tienda5.jpg"  class="pequeña"></div>
