--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="restaurantes.css" type="text/css">
-  <link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
+  <link rel="stylesheet" href="restaurantemov.css" type="text/css">
   <title>Restaurantes</title>
 </head>
 <body>
@@ -30,55 +30,98 @@
           </ul>
           <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
           <div class="secc">Rutas</div>
-          <div class="secc"><a href="castellano.html">Sobre nosotros</a></div>
+          <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
         <div id="nosotros">
-        <h1> Tiendas</h1>
-        <div id="madame"><h2>Yang Kuang Supermercats</h2>
-          <div> <img src="foto/madame4.jpg"  class="grande"></div>
-          <div> <img src="foto/madame5.jpg"  class="grande"></div>
-          <p id="text">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.</p>
-          <div> <img src="foto/madame1.jpg"  class="pequeña"></div>
-          <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
-          <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
-          <p id="text">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
-        </div>
+        <h1> Restaurantes</h1>
+                <div id="madame"><h2>Ramen-ya Ajisen</h2>
+                  <div> <img src="foto/ajisen.jpg"  class="grande"></div>
+                  <p id="text">Ajisen es un restaurante japosen pequeño pero muy decorado y sirven unos platos muy buenos y bastante economicos. Para poder comer aqui primero hay reservar mesa.</p>
+                  <p id="text">Recomendamos este restauyrante ya que esta muy bien en calidad precio, el servicio es atento y el local es tranquilo. </p>
+                  <p id="text">Telefono: 933 30 26 04</p>
+                </div>
 
-        <div id="nunoya"><h2>Nunoya</h2>
-          <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
-          <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
-        <p id="text">Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
-          <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
-          <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
-          <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
-            <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.</p>
-            <p id="text">Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
-        </div>
-          <div id="norma"><h2>Norma comics</h2>
-            <div> <img src="foto/norma3.jpg"  class="grande"></div>
-            <div> <img src="foto/norma2.jpg"  class="grande"></div>
-             <p id="text">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
-            <div> <img src="foto/norma1.jpg"  class="pequeña"></div>
-            <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
-            <p id="text">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
+
+                <div id="nunoya"><h2>Fukuya</h2>
+                  <div> <img src="foto/fukuya.jpg"  class="grande"></div>
+                <p id="text">Fukuya, ofrece un sushi de muy alta calidad además de otros platos caseros de la gastronomia japonesa. El restaurante por dentro es grande, muy bien iluminado y gran decoración con objetos japoneses por las paredes y estanterias. La comida es estupenda y muy economica.</p>
+                <p id="text">En el bufet libre, hay mucho que elegir ya que es muy variado y barato, además  el servicio es rapido.</p>
+                <p id="text">Telefono: 935 18 65 04</p>
+                </div>
+
+
+              <div id="norma"><h2>Ramen-ya Hiro</h2>
+                <div> <img src="foto/hiro.jpg"  class="grande"></div>
+                 <p id="text">Ramen-ya Hiro, que decir de este restaurante, hacen el mejor ramen de Barcelona, local pequeño, 1h de cola pero merece la pena y los camareros son amables.</p>
+
+                  <p id="text">Telefono: 930 02 84 41</p>
+              </div>
+
+
+
+          <div id="otonashi"><h2>Jardin de Bambu</h2>
+            <div> <img src="foto/jardin.jpg"  class="grande"></div>
+            <p id="text">Jardin de Bambu, es espacioso, en calidad/precio esta bastante bien, tienen una amplia carta, y platos que normalmente no encontrarias en un buffet.</p>
+            <p id="text">La comida la sirven muy rapida y es de agradecer, los camaremos estan un poco estresados pero intentan ser amables a la vez.</p>
+            <p id="text">Telefono: 935 39 88 82</p>
           </div>
-          <div id="otonashi"><h2>Otonashi</h2>
-            <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
-            <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-  sjytykeeyk
-            <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
-            <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
+
+          <div id="otonashi"><h2>Mikawa</h2>
+            <div> <img src="foto/mikawa.jpg"  class="grande"></div>
+            <p id="text">Mikawa es un resataurante de comida japonesa, la carta es variada (makis, sopas, temakis, sushi, noodles, fideos, arroz...). Su presentación esta bien, El servicio es rápido y los camareros son amables. El precio es muy ajustado a la calidad.</p>
+            <p id="text">Suelen tardar un poco en servir la comida ya que solo hay 2 camareros para atender a 30 personas.</p>
+            <p id="text">Telefono: 930 23 19 04</p>
           </div>
-          <div id="haiku"><h2>Haiku</h2>
-            <div> <img src="foto/haiku1.jpg"  class="grande"></div>
-            <div> <img src="foto/haiku2.jpg"  class="grande"></div>
-            ferh
-            <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
-            <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
+
+          <div id="haiku"><h2>Nihon Sakari</h2>
+            <div> <img src="foto/nihon.jpg"  class="grande"></div>
+            <p id="text">Nihon Sakari, es uno de los mejores restaurantes, acogedor, con calidad y con un precio razonable. </p>
+
+            <p id="text">Telefono: 932 65 04 60</p>
           </div>
+
+          <div id="norma"><h2>Nomo Gracia</h2>
+            <div> <img src="foto/nomo.jpg"  class="grande"></div>
+            <p id="text">Nomo Graca, donde la comida es una maravilla, comida japonesa con sababores nuevos. La comida bien presentada y bien servida en un ambiente informal y bien decorado. El servicio es execelente y el local es amplio con opción de reserva aunque algo lento en servir.</p>
+            <p id="text">Telefono: 934 15 96 22</p>
+          </div>
+          <div id="haiku"><h2>Ramen BCN</h2>
+            <div> <img src="foto/ramen.jpg"  class="grande"></div>
+            <p id="text">En este restaurente la comida esta buenisima, el trato al cliente es estupendo siendo amable y atento, el local es grande y limpio y buena decoracion basica pero llamatiba a la vez, es muy recomendable visitar este lugar.</p>
+            <p id="text">Telefono: 931 06 58 74</p>
+          </div>
+
+
+          <div id="haiku"><h2>Yatai</h2>
+            <div> <img src="foto/yatai.jpg"  class="grande"></div>
+            <p id="text">Si no has estado nunca en Japon, tienes que visitar este lugar, ya que la decoracion de este sitio esta repleto de detalles curiosos. Recomendale reservar ya que se suele llenar mucho. La comida es barata pero no es de muy buena calidad, asi que si quieres gastarte poco dinero y comer mucho este es tu sitio.</p>
+            <p id="text">Telefono: 935 32 64 56</p>
+          </div>
+
+
+
+          <div id="haiku"><h2>Kawamura</h2>
+            <div> <img src="foto/okono.jpg"  class="grande"></div>
+            <p id="text">Kawamura es un restaurante cálido y bien ambientado con la cultura japonesa. El servicio es muy atento y profesional, el precio es razonable ya que la comida es de muy buena calidad. </p>
+
+            <p id="text">Telefono: 930 23 75 46</p>
+          </div>
+
+
+          <div id="haiku"><h2>Wok Yutaka</h2>
+            <div> <img src="foto/yutaka1.jpg"  class="grande"></div>
+            <p id="text">Yutaka es un restaurante buffet libre, donde puedes encontrar comida japonesa. Es un sitio donde el precio esta bien, el local es algo ruidoso pero es bastante amplio. </p>
+
+            <p id="text">Telefono: 934 58 04 94</p>
+          </div>
+
+
+
+
+
+
+
+
 
       </div>
   </div>
