--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -47,7 +47,7 @@
         <div id="nunoya"><h2>Nunoya</h2>
           <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
           <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
-        <p id="text">Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
+        <p id="text">Si lo tuyo es la moda, el diseño o la filia hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
