--- a/web bien/castellano.html
+++ b/web bien/castellano.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="castellano.css" type="text/css">
   <link rel="stylesheet" href="castellanomov.css" type="text/css">
+  <link rel="stylesheet" href="castellano.css" type="text/css">
+
   <title>Sobre nosotros</title>
 </head>
 <body>
@@ -25,25 +26,45 @@
       <div id="blog">
         <div id="secciones">
           <ul class="secc">Tiendas
-            <li class="tiendas"> <a href="ropa y accesorios.html">Ropa y accesorios</a></li>
+            <li class="tiendas"><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
             <li class="tiendas"><a href="consum.html">Consumo</a></li>
           </ul>
           <div class="secc"><a href="restaurantes.html">Restaurantes</a></div>
           <div class="secc">Rutas</div>
           <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
+
+
+        <ul id="menu">
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <ul class="interior">
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
+           <ul class="interior">
+             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
+             <li><a href="#r">Consumo</a></li>
+            </ul>
+         </li>
+         <li><a href="#r">Restaurante</a></li>
+         <li><a href="#r">Rutas</a></li>
+         <li><a href="#r">Nosotros</a></li>
+         <li><a href="#r">Home</a></li>
+
+    </ul>
+  </ul>
+
+
         <div id="nosotros">
-        <h1> Sobre nosotros</h3>
+        <h1> Sobre nosotros</h1>
         <p>Somos una empresa dedicada a la gente interesada por la cultura
         japonesa, recomendamos las mejores tiendas de estilo japonés de Barcelona para que las puedas visitar.</p>
 
         <p>Comida, ropa, decoración, restaurantes y muchas cosas más que te recomendamos en nuestra ruta por Barcelona.</p>
-        <p> BarnaJap surgió de la idea de dos alumnos de artes graficas del Esteve Terrades,</p>
+        <p> BarnaJap surgió de la idea de dos alumnos de artes graficas del Esteve Terrades.</p>
        </div>
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>sube</p></a></div>
+    <div id="flecha"><a href="#fondo"><p>^</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
