--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
   <link rel="stylesheet" href="ropa y accesorios.css" type="text/css">
-  <link rel="stylesheet" href="ropa y accesoriosmov.css" type="text/css">
+
+
   <title>Ropa y accesorios</title>
 </head>
 <body>
@@ -32,6 +34,25 @@
           <div class="secc">Rutas</div>
           <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
+
+        <ul id="menu">
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <ul class="interior">
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
+           <ul class="interior">
+             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
+             <li><a href="#r">Consumo</a></li>
+            </ul>
+         </li>
+         <li><a href="#r">Restaurante</a></li>
+         <li><a href="#r">Rutas</a></li>
+         <li><a href="#r">Nosotros</a></li>
+         <li><a href="#r">Home</a></li>
+    </ul>
+  </ul>
+
+
+
         <div id="nosotros">
         <div id="madame"><h2>Madame Chocolat</h2>
           <div> <img src="foto/madame4.jpg"  class="grande"></div>
@@ -89,7 +110,7 @@
   </div>
 </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>sube</p></a></div>
+    <div id="flecha"><a href="#fondo"><p>^</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
