--- a/web bien/castellano.html
+++ b/web bien/castellano.html
@@ -36,19 +36,18 @@
 
 
         <ul id="menu">
-     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">&#9777;</label>
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
              <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-             <li><a href="#r">Consumo</a></li>
+             <li><a href="consum.html">Consumo</a></li>
             </ul>
          </li>
-         <li><a href="#r">Restaurante</a></li>
-         <li><a href="#r">Rutas</a></li>
-         <li><a href="#r">Nosotros</a></li>
-         <li><a href="#r">Home</a></li>
-
+         <li><a href="restaurantes.html">Restaurante</a></li>
+         <li><a href="r">Rutas</a></li>
+         <li><a href="castellano.html">Nosotros</a></li>
+         <li><a href="sintesis.html">Home</a></li>
     </ul>
   </ul>
 
@@ -64,7 +63,7 @@
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>^</p></a></div>
+    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
