--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -36,7 +36,7 @@
         </div>
 
         <ul id="menu">
-     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">&#9777;</label>
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
@@ -110,7 +110,7 @@
   </div>
 </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>^</p></a></div>
+    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
