--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -33,6 +33,23 @@
           <div class="secc">Rutas</div>
           <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
+
+        <ul id="menu">
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <ul class="interior">
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
+           <ul class="interior">
+             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
+             <li><a href="consum.html">Consumo</a></li>
+            </ul>
+         </li>
+         <li><a href="restaurantes.html">Restaurante</a></li>
+         <li><a href="#r">Rutas</a></li>
+         <li><a href="castellano.html">Nosotros</a></li>
+         <li><a href="#r">Home</a></li>
+    </ul>
+  </ul>
+
         <div id="nosotros">
         <h1> Tiendas</h1>
         <div id="madame"><h2>Yang Kuang Supermercats</h2>
@@ -67,7 +84,7 @@
             <p id="text"> Este sitio esta bien para ir una vez a la semana, ya que solo un capuchino cuesta 6,30€ no es muy sano para la cartera. Si te interesa aprender hacer postres japoneses, en este sitio hacen cursos pero tienen muy pocas plazas asi que corre.</p>
             <p id="text">Telefon: 934 53 63 83</p>
           </div>
-          <div id="otonashi"><h2>tienda</h2>
+          <div id="haiku"><h2>tienda</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
   Hay que ir a este sitio AÚN
@@ -79,7 +96,7 @@
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>sube</p></a></div>
+    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
