--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -36,17 +36,17 @@
         </div>
 
         <ul id="menu">
-     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">&#9777;</label>
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
              <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
-             <li><a href="#r">Consumo</a></li>
+             <li><a href="consum.html">Consumo</a></li>
             </ul>
          </li>
-         <li><a href="#r">Restaurante</a></li>
+         <li><a href="restaurantes.html">Restaurante</a></li>
          <li><a href="#r">Rutas</a></li>
-         <li><a href="#r">Nosotros</a></li>
+         <li><a href="castellano.html">Nosotros</a></li>
          <li><a href="#r">Home</a></li>
     </ul>
   </ul>
@@ -72,8 +72,8 @@
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
-            <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.</p>
-            <p id="text">Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
+            <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.
+            Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
             <p id="text">Telofono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
