--- a/web bien/castellano.html
+++ b/web bien/castellano.html
@@ -36,7 +36,7 @@
 
 
         <ul id="menu">
-     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">&#9777;</label>
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
