--- a/web bien/restaurantes.html
+++ b/web bien/restaurantes.html
@@ -32,6 +32,23 @@
           <div class="secc">Rutas</div>
           <div class="secc"><a href="castellano.html">Nosotros</a></div>
         </div>
+
+        <ul id="menu">
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <ul class="interior">
+         <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tiendas</label>
+           <ul class="interior">
+             <li><a href="ropa y accesorios.html">Ropa y accesorios</a></li>
+             <li><a href="consum.html">Consumo</a></li>
+            </ul>
+         </li>
+         <li><a href="restaurantes.html">Restaurantes</a></li>
+         <li><a href="#r">Rutas</a></li>
+         <li><a href="castellano.html">Nosotros</a></li>
+         <li><a href="#r">Home</a></li>
+    </ul>
+  </ul>
+
         <div id="nosotros">
         <h1> Restaurantes</h1>
                 <div id="madame"><h2>Ramen-ya Ajisen</h2>
@@ -126,7 +143,7 @@
       </div>
   </div>
   <div id="abajo">
-    <div id="flecha"><a href="#fondo"><p>sube</p></a></div>
+    <div id="flecha"><a href="#fondo"><p>&#10048;</p></a></div>
     <div id="redes">
       <a href="https://twitter.com/barnajap?lang=es"><img src="foto/redes-01.png" class="img"></a>
       <a href="https://www.instagram.com/barnajap/"><img src="foto/redes-02.png" class="img"></a>
