--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -86,10 +86,10 @@
             <p id="text">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
             <p id="text">Telofono: 932 44 84 23</p>
           </div>
-          <div id="otonashi"><h2>Otonashi</h2>
+          <div id="otonashi"><h2>Otomashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
             <div> <img src="foto/otonashi1.jpg"  class="grande"></div>
-            <p id="text">Otonashi es una pequeña tienda de merchandising y accesorios, el trato al publico es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
+            <p id="text">Otomashi es una pequeña tienda de merchandising y accesorios, el trato al publico es espontaneo ya que depende de la persona a cargo te tratan de una forma u otra. Tienen un precio económico si comparamos con el resto de tiendas similares que hay en esta zona.</p>
             <div> <img src="foto/otonashi3.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
@@ -103,6 +103,26 @@
             <div> <img src="foto/haiku3.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
+            <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text">Telofono: 932 17 96 23</p>
+          </div>
+          <div id="haiku"><h2>Momo store</h2>
+            <div> <img src="foto/momo1.jpg"  class="grande"></div>
+            <div> <img src="foto/momo2.jpg"  class="grande"></div>
+            <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <div> <img src="foto/momo3.jpg"  class="pequeña"></div>
+            <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
+            <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
+            <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
+            <p id="text">Telofono: 932 17 96 23</p>
+          </div>
+          <div id="haiku"><h2>Eikyo</h2>
+            <div> <img src="foto/momo1.jpg"  class="grande"></div>
+            <div> <img src="foto/momo2.jpg"  class="grande"></div>
+            <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
+            <div> <img src="foto/momo3.jpg"  class="pequeña"></div>
+            <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
+            <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
             <p id="text">Telofono: 932 17 96 23</p>
           </div>
