--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -35,7 +35,7 @@
         </div>
 
         <ul id="menu">
-     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1">=</label>
+     <li><input type="checkbox" name="list" id="nivel1-1"><label for="nivel1-1"><h1>=</h1></label>
      <ul class="interior">
          <li><input type="checkbox" name="list" id="nivel2-1" ><label for="nivel2-1">Tienda</label>
            <ul class="interior">
