--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -57,34 +57,34 @@
         <div id="madame"><h2>Madame Chocolat</h2>
           <div> <img src="foto/madame4.jpg"  class="grande"></div>
           <div> <img src="foto/madame5.jpg"  class="grande"></div>
-          <p id="text">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.</p>
+          <p id="text1">Madame Chocolat es una tienda de ropa y accesorios de cosas alternativas japonesas  donde puedes encontrar desde ropa lolita, gótica, steampunk, otras tendencias alternativas y un largo catalogo de accesorios y decoración japonesa.</p>
           <div> <img src="foto/madame1.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame2.jpg"  class="pequeña"></div>
           <div> <img src="foto/madame3.jpg"  class="pequeña"></div>
-          <p id="text">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
-          <p id="text">Telefono: 932 44 84 23</p>
+          <p id="text1">Nuestra opinión sobre Madame Chocolat es que aun así que la tienda sea bastante pequeña, tiene gran variedad de cosas sobre Japón, sobretodo en ropa y accesorios de diferentes marcas Japonesas y la calidad de sus productos es bastante buena.</p>
+          <p id="text3">Telefono: 932 44 84 23</p>
         </div>
 
         <div id="nunoya"><h2>Nunoya</h2>
           <div> <img src="foto/nunoya5.jpg"  class="grande"></div>
           <div> <img src="foto/nunoya6.jpg"  class="grande"></div>
-        <p id="text">Si lo tuyo es la moda, el diseño o la filia hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
+        <p id="text2">Si lo tuyo es la moda, el diseño o la filia hacia los materiales telares, tenemos una buena noticia para ti. Nunoya es una tienda de telas especializadas en niponas y kimonos que vienen adquiridas desde Japón, situada en Barcelona, en el interior puedes encontrar todo tipo de telas tanto de vestir como para estar en casa, su interior es bastante amplio y con una variedad de distintas telas, entre ellas diseños geométricos tradicionales y estampados florales.</p>
           <div> <img src="foto/nunoya1.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya2.jpg"  class="pequeña"></div>
           <div> <img src="foto/nunoya3.jpg"  class="pequeña"></div>
             <p id="text">Pensamos que Nunoya es una tienda bien iluminada y de tamaño mediano, sus telas estampadas son  de gran calidad y de algodón 100%.
             Esta tienda tiene un trato estupendo con la gente, sin duda la recomendamos si necesitas telas de cualquier tipo.</p>
-            <p id="text">Telofono: 933 17 53 88</p>
+            <p id="text3">Telofono: 933 17 53 88</p>
         </div>
           <div id="norma"><h2>Norma comics</h2>
             <div> <img src="foto/norma3.jpg"  class="grande"></div>
             <div> <img src="foto/norma2.jpg"  class="grande"></div>
-             <p id="text">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
+             <p id="text2">Norma Comics de Barcelona es una de las librerías especializadas en cómics más importantes de Europa, donde ahí puedes encontrar desde accesorios y mangas provenientes de Japón.</p>
             <div> <img src="foto/norma1.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma4.jpg"  class="pequeña"></div>
             <div> <img src="foto/norma5.jpg"  class="pequeña"></div>
-            <p id="text">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
-            <p id="text">Telofono: 932 44 84 23</p>
+            <p id="text1">Norma Comics desde nuestro punto de vista es una tienda bastante amplia, que cuenta con dos plantas, en una de ellas puedes encontrar cómics y figuras, en la segunda planta puedes encontrar cosas mas ambientadas sobre la cultura japonesa que es la parte que más nos interesa.</p>
+            <p id="text3">Telofono: 932 44 84 23</p>
           </div>
           <div id="otonashi"><h2>Otomashi</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
@@ -94,7 +94,7 @@
             <div> <img src="foto/otonashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/otonashi5.jpg"  class="pequeña"></div>
             <p id="text">Según la critica de la gente, en esta tienda puedes comprar accesorios de imitación china pero a un buen precio. Es recomendable comprar si no te quieres gastar mucho dinero en accesorios.</p>
-            <p id="text">Telofono: 930 07 64 10</p>
+            <p id="text3">Telofono: 930 07 64 10</p>
           </div>
           <div id="haiku"><h2>Haiku</h2>
             <div> <img src="foto/haiku1.jpg"  class="grande"></div>
@@ -104,7 +104,7 @@
             <div> <img src="foto/haiku4.jpg"  class="pequeña"></div>
             <div> <img src="foto/haiku5.jpg"  class="pequeña"></div>
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
-            <p id="text">Telofono: 932 17 96 23</p>
+            <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Momo store</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
@@ -114,7 +114,7 @@
             <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
-            <p id="text">Telofono: 932 17 96 23</p>
+            <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
             <div> <img src="foto/momo1.jpg"  class="grande"></div>
@@ -124,7 +124,7 @@
             <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
             <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
-            <p id="text">Telofono: 932 17 96 23</p>
+            <p id="text3">Telofono: 932 17 96 23</p>
           </div>
       </div>
   </div>
