--- a/web bien/ropa y accesorios.html
+++ b/web bien/ropa y accesorios.html
@@ -117,14 +117,14 @@
             <p id="text3">Telofono: 932 17 96 23</p>
           </div>
           <div id="haiku"><h2>Eikyo</h2>
-            <div> <img src="foto/momo1.jpg"  class="grande"></div>
-            <div> <img src="foto/momo2.jpg"  class="grande"></div>
+            <div> <img src="foto/eikyo1.jpg"  class="grande"></div>
+            <div> <img src="foto/eikyo2.jpg"  class="grande"></div>
             <p id="text">Haiku es una tienda pequeña y muy agradable, puedes encontrar tanto cultura japonesa tradicional como moderna. Los precios son muy competitivos, pero merece la pena por la calidad que tienen.</p>
-            <div> <img src="foto/momo3.jpg"  class="pequeña"></div>
-            <div> <img src="foto/momo4.jpg"  class="pequeña"></div>
-            <div> <img src="foto/momo5.jpg"  class="pequeña"></div>
+            <div> <img src="foto/eikyo3.jpg"  class="pequeña"></div>
+            <div> <img src="foto/eikyo4.jpg"  class="pequeña"></div>
+            <div> <img src="foto/eikyo5.jpg"  class="pequeña"></div>
             <p id="text">Nuestra opinión sobre esta tienda es que aun asi de ser una tienda pequeña y llena de contenido, la atención al publico cambia según la persona que vaya a comprar. Pero por lo demas recomendamos esta tienda a la gente que quiera sentirse en japon y sus productos. </p>
-            <p id="text3">Telofono: 932 17 96 23</p>
+            <p id="text">Telofono: 932 17 96 23</p>
           </div>
       </div>
   </div>
