--- a/web bien/consum.html
+++ b/web bien/consum.html
@@ -55,23 +55,23 @@
         <div id="madame"><h2>Yang Kuang Supermercats</h2>
           <div> <img src="foto/yang1.jpg"  class="grande"></div>
           <div> <img src="foto/yang2.jpg"  class="grande"></div>
-          <p id="text">Yang Kuang es una tienda de alimentación oriantal que se encuentra en pleno Arco de Triumfo en Barcelona, en ella puedes encontrar todo tipo de alimentos, entre ellos se encuentran: Carne, dulces, bebidas de distintos sabores, tofu fresto y, además esta tienda dispone de dos apartados, en una podrás encontrar los productos más frescos y en la otra parte podrás encontrar comida ya preparada. Un añadido también es que es perfecta para la gente vegana y vegetariana.</p>
+          <p id="text1">Yang Kuang es una tienda de alimentación oriantal que se encuentra en pleno Arco de Triumfo en Barcelona, en ella puedes encontrar todo tipo de alimentos, entre ellos se encuentran: Carne, dulces, bebidas de distintos sabores, tofu fresto y, además esta tienda dispone de dos apartados, en una podrás encontrar los productos más frescos y en la otra parte podrás encontrar comida ya preparada. Un añadido también es que es perfecta para la gente vegana y vegetariana.</p>
           <div> <img src="foto/yang3.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang4.jpg"  class="pequeña"></div>
           <div> <img src="foto/yang5.jpg"  class="pequeña"></div>
-          <p id="text">Nuestra opinión sobre este supermercado es que los productos estan bien de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
-          <p id="text">Telefono: 932 46 29 00</p>
+          <p id="text1">Nuestra opinión sobre este supermercado es que los productos estan bien de precio, es una tienda amplia y muy bien iluminada, disponen de muchos productos orientales y de gran calidad, la recomendamos sin duda por sus grandes productos.</p>
+          <p id="text3">Telefono: 932 46 29 00</p>
         </div>
 
         <div id="nunoya"><h2>Tokyo-Ya</h2>
           <div> <img src="foto/tokio1.jpg"  class="grande"></div>
           <div> <img src="foto/tokio2.jpg"  class="grande"></div>
-        <p id="text">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. La atención al publico está muy bien, ya que te reciben con mucho guto al entrar.</p>
+        <p id="text2">Tokyo-Ya se encuentra en Barcelona concretamente en zona de l'Eixample, es una tienda de alimentación japonesa, son unos de las primeras empresas en acercar la gastronomía japonesa a España. La atención al publico está muy bien, ya que te reciben con mucho guto al entrar.</p>
           <div> <img src="foto/tokio3.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio5.jpg"  class="pequeña"></div>
           <div> <img src="foto/tokio4.jpg"  class="pequeña"></div>
             <p id="text">Los precios de este supermercado son un poco elevados, ya que son de importación, vienen con buena calidad y con los productos congelados son muy frescos.</p>
-            <p id="text">Telefon: 935 32 19 38</p>
+            <p id="text3">Telefon: 935 32 19 38</p>
 
         </div>
           <div id="otonashi"><h2>Takashi Ochiai</h2>
@@ -82,7 +82,7 @@
             <div> <img src="foto/takashi4.jpg"  class="pequeña"></div>
             <div> <img src="foto/takashi5.jpg"  class="pequeña"></div>
             <p id="text"> Este sitio esta bien para ir una vez a la semana, ya que solo un capuchino cuesta 6,30€ no es muy sano para la cartera. Si te interesa aprender hacer postres japoneses, en este sitio hacen cursos pero tienen muy pocas plazas asi que corre.</p>
-            <p id="text">Telefon: 934 53 63 83</p>
+            <p id="text3">Telefon: 934 53 63 83</p>
           </div>
           <div id="haiku"><h2>tienda</h2>
             <div> <img src="foto/otonashi2.jpg"  class="grande"></div>
